# for-all-learners

./: .biomeignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT_SCHEDULE.md  LICENSE  README.md  RESTORE_2025_10_15_SUMMARY.md  ROADMAP.md  SECURITY.md  _actions_imports_analysis.md  admin.sql  biome.json  bun.lockb  bunfig.toml  global.d.ts  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  schema.sql  tsconfig.json  vercel.json  vitest.config.mts  vitest.config.ts  vitest.setup.ts
.cursor/: mcp.json
.docs/: cosense_sync.md  idea.md  question_generate.md  search.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.serena/: project.yml
app/: globals.css  layout.tsx  page.tsx
components/: CodeBlockComponent.tsx  LocaleSwitcher.tsx  PageHelpButton.tsx  QuizSettingsDialog.tsx  SearchBar.tsx  SectionHeader.tsx  ShareSettingsModal.tsx  UserIdSetter.tsx  admin-nav.tsx  app-footer.tsx  app-nav-dropdown.tsx  auth-header.tsx  container.tsx  create-page-dialog.tsx  main-nav.tsx  mobile-nav.tsx  page-help-button.tsx  page-link-preview-card.tsx  providers.tsx  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: cards_commands.rs  decks_commands.rs  learning_logs_commands.rs  milestones_commands.rs  mod.rs  notes_commands.rs  pages_commands.rs  study_goals_commands.rs  user_settings_commands.rs
src-tauri/src/db/: error.rs  mod.rs  models.rs  schema.rs
(+2081 files in other folders)
